--- a/client/BUILD.bazel
+++ b/client/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_binary")
+load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary", "kt_jvm_library")
 
 java_binary(
     name = "client-bin",
@@ -7,11 +7,11 @@ java_binary(
 )
 
 genrule(
-    name = "moe",
-    outs = ["moe"],
+    name = "moe_release",
     srcs = [
         "//util:java-exec-prefix",
-        ":client-bin_deploy.jar"
+        ":client-bin_deploy.jar",
     ],
+    outs = ["moe"],
     cmd_bash = "cat $(location //util:java-exec-prefix) $(location :client-bin_deploy.jar) > $@",
 )
