--- a/client/src/test/java/com/google/devtools/moe/client/BUILD.bazel
+++ b/client/src/test/java/com/google/devtools/moe/client/BUILD.bazel
@@ -16,8 +16,8 @@ java_library(
     srcs = ["NullFileSystemModule.java"],
     deps = [
         "//client/src/main/java/com/google/devtools/moe/client:core",
-        "@maven//com/google/dagger",
         "@maven//com/google/code/findbugs:jsr305",
+        "@maven//com/google/dagger",
     ],
 )
 
@@ -36,6 +36,8 @@ jvm_unit_test(
     deps = [
         "//client/src/main/java/com/google/devtools/moe/client",
         "//client/src/main/java/com/google/devtools/moe/client:core",
+        "//client/src/main/java/com/google/devtools/moe/client/qualifiers",
+        "@maven//com/google/code/findbugs:jsr305",
         "@maven//com/google/dagger",
         "@maven//com/google/guava",
         "@maven//com/google/truth",
