--- a/client/src/test/java/com/google/devtools/moe/client/svn/BUILD.bazel
+++ b/client/src/test/java/com/google/devtools/moe/client/svn/BUILD.bazel
@@ -28,6 +28,7 @@ jvm_unit_test(
     name = "SvnRevisionHistoryTest",
     deps = [
         "//client/src/main/java/com/google/devtools/moe/client",
+        "//client/src/main/java/com/google/devtools/moe/client/config",
         "//client/src/main/java/com/google/devtools/moe/client/moshi",
         "@maven//cglib:cglib-nodep",
         "@maven//com/google/guava",
