--- a/client/src/test/java/com/google/devtools/moe/client/svn/BUILD.bazel
+++ b/client/src/test/java/com/google/devtools/moe/client/svn/BUILD.bazel
@@ -48,6 +48,7 @@ jvm_unit_test(
         "//client/src/main/java/com/google/devtools/moe/client/config",
         "@maven//cglib:cglib-nodep",
         "@maven//com/google/dagger",
+        "@maven//com/google/errorprone:error_prone_annotations",
         "@maven//com/google/guava",
         "@maven//com/google/truth",
         "@maven//junit",
@@ -65,6 +66,7 @@ jvm_unit_test(
         "//client/src/main/java/com/google/devtools/moe/client/config",
         "@maven//cglib:cglib-nodep",
         "@maven//com/google/dagger",
+        "@maven//com/google/errorprone:error_prone_annotations",
         "@maven//com/google/guava",
         "@maven//com/google/truth",
         "@maven//javax/inject:javax_inject",
