--- a/client/src/test/java/com/google/devtools/moe/client/testing/BUILD.bazel
+++ b/client/src/test/java/com/google/devtools/moe/client/testing/BUILD.bazel
@@ -6,6 +6,7 @@ java_library(
     visibility = ["//client/src/test:__subpackages__"],
     deps = [
         "//client/src/main/java/com/google/devtools/moe/client",
+        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
         "//client/src/main/java/com/google/devtools/moe/client:core",
         "@maven//com/google/dagger",
         "@maven//javax/inject:javax_inject",
