rework the bazelrc stuff a wee bit.

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,13 @@
 build --strategy=KotlinCompile=worker
 
+# Uncomment these (or copy to user.bazelrc) if you want to log to buildbuddy.
+# build --bes_results_url=https://app.buildbuddy.io/invocation/
+# build --bes_backend=grpcs://cloud.buildbuddy.io
+
+# Uncomment this (or copy to user.bazelrc) if you want to
+# associate these logs with your account.
+# build --remote_header=x-buildbuddy-api-key=<your api key>
+
 build:ci --build_metadata=ROLE=CI
 build:ci --bes_results_url=https://app.buildbuddy.io/invocation/
 build:ci --bes_backend=grpcs://remote.buildbuddy.io
